--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,7 @@
     "license": "MIT",
     "authors": [
         {
-            "name": "Crownix LLC",
+            "name": "Cronix LLC",
             "email": "sales@ycronixweb.com",
             "homepage": "https://cronixweb.com/",
             "role": "Company"
