--- a/src/Resources/config/plugin.xml
+++ b/src/Resources/config/plugin.xml
@@ -8,20 +8,20 @@
         <copyright>Copyright (c) 2025 Cronixweb</copyright>
         <license>MIT</license>
         <link>https://cronixweb.com</link>
-        <description>Professional CronixAvantLink plugin for Shopware 6 - Advanced linking and automation capabilities</description>
+        <description>Complete AvantLink affiliate tracking solution for Shopware 6 with dual-layer tracking system: sitewide visitor tracking and detailed order conversion tracking with anti-duplication protection</description>
     </meta>
     
     <label lang="de-DE">Avantlink Integration By Cronix</label>
     <label lang="en-GB">Avantlink Integration By Cronix</label>
     
-    <description lang="de-DE">Professionelles CronixAvantLink Plugin für erweiterte Verknüpfungs- und Automatisierungsfunktionen in Shopware 6</description>
-    <description lang="en-GB">Professional CronixAvantLink plugin for advanced linking and automation capabilities in Shopware 6</description>
+    <description lang="de-DE">AvantLink Affiliate-Tracking für Shopware 6 mit dualem System: Sitewide-Besucher-Tracking und detailliertes Order-Conversion-Tracking mit Anti-Duplikations-Schutz für genaue Ergebnisse.</description>
+    <description lang="en-GB">AvantLink affiliate tracking for Shopware 6 with dual-layer system: comprehensive sitewide visitor tracking and detailed order conversion tracking with duplicate prevention.</description>
     
     <manufacturerLink lang="de-DE">https://cronixweb.com</manufacturerLink>
     <manufacturerLink lang="en-GB">https://cronixweb.com</manufacturerLink>
     
-    <supportLink lang="de-DE">https://cronixweb.com/support</supportLink>
-    <supportLink lang="en-GB">https://cronix.com/support</supportLink>
+    <supportLink lang="de-DE">https://cronixweb.com/contact-us/</supportLink>
+    <supportLink lang="en-GB">https://cronixweb.com/contact-us/</supportLink>
     
     <changelog>
         <changes lang="de-DE">
